--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -139,7 +139,7 @@ z-index: 1;
 width: 100%;
 background: transparent;
 background-color: white;
-box-shadow: 0px 2px 5px #888888;
+border-bottom: solid 0.5px #555555;
 }
 
 /* ヘッダーロゴのスタイル */
