--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,7 +50,7 @@ body {
   right: 0;
   height: auto;
   min-height: 100%;
-  background-color: #f5f5f5;
+  background-color: white;
 }
 }
 
@@ -62,7 +62,7 @@ body {
     right: 0;
     height: auto;
     min-height: 100%;
-    background-color: #f5f5f5;
+    background-color: white;
   }
 }
 
