--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,7 +18,9 @@
         <input name="image" type="file">
         <p>メールアドレス</p>
         <input name="email" value="<%= @user.email %>">
-        <input type="submit" value="保存">
+        <div class="form-group">
+          <input type="submit" value="保存">
+        </div>
         <% end %>
       </div>
     </div>
