--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
         <% else %>
           <ul class="header-menus">
             <li>
-              <%= link_to("Libeuとは", "https://wiblu-blog.net/wiblu-toha") %>
+              <%= link_to("Libeuとは", "https://libeu-blog.net/2024/01/17/libeu-riyu/") %>
             </li>
             <li>
               <%= link_to("新規登録", "/signup") %>
